bazel_dep(name = "abseil-cpp", version = "20250127.1")
bazel_dep(name = "googletest", version = "1.17.0")
bazel_dep(name = "rules_python", version = "1.5.3")
bazel_dep(name = "pybind11_bazel", version = "2.13.6")
bazel_dep(name = "grpc", version = "1.72.0")
bazel_dep(name = "boost.asio", version = "1.88.0.bcr.1")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.10")  # change this to your python version
